<resources>
    <string name="app_name">Bingo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="bingo_letter">Bingo Says Letter</string>
    <string name="bingo_start">Bingo Start</string>
    <string name="bingo_stop">Bingo Stop</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="animal">Animal</string>
    <string name="food">Food/Fruit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>